# claude-code-proxy

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/claude_code_proxy/: __init__.py  __main__.py  app.py  config.py  errors.py  logger.py  translator.py
tests/: test_app.py  test_translator.py
